[package]
name = "ddp_server"
version = "0.1.0"
authors = ["Guilherme Gazzo <guilherme@gazzo.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-tungstenite = "0.10.0"
async-std = "1.8.0"
futures = "*"
env_logger = "*"
log = "0.4.11"
tungstenite = "0.11.1"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.0"
serde_json = "1.0.0"
rand = "0.3.8"
uuid = { version = "0.8", features = ["serde", "v4"] }
tokio = { version = "1.0.1", features = ["full" ] }